--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -17,168 +17,68 @@
 ;==========================================================
 
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+background = #fbf1c7
+foreground = #3c3836
 
-[bar/i3]
-width = 100%
-height = 24pt
-radius = 6
+color1 = #cc241d
+color2 = #98971a
+color3 = #d79921
+color4 = #458588
 
-; dpi = 96
+[module/i3]
+type = internal/i3
+format = <label-state>
+index-sort = true
 
-background = ${colors.background}
-foreground = ${colors.foreground}
+label-focused = %name%
+label-focused-background = ${colors.color4}
+label-focused-foreground = ${colors.background}
+label-focused-padding = 2
 
-line-size = 3pt
+label-unfocused = %name%
+label-unfocused-padding = 2
 
-border-size = 4pt
-border-color = #00000000
-
-padding-left = 0
-padding-right = 1
-
-module-margin = 1
-
-separator = |
-separator-foreground = ${colors.disabled}
-
-font-0 = monospace;2
-
-modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-enable-ipc = true
-
-; wm-restack = generic
-; wm-restack = bspwm
-; wm-restack = i3
-
-; override-redirect = true
-
-; This module is not active by default (to enable it, add it to one of the
-; modules-* list above).
-; Please note that only a single tray can exist at any time. If you launch
-; multiple bars with this module, only a single one will show it, the others
-; will produce a warning. Which bar gets the module is timing dependent and can
-; be quite random.
-; For more information, see the documentation page for this module:
-; https://polybar.readthedocs.io/en/stable/user/modules/tray.html
-[module/systray]
-type = internal/tray
-
-format-margin = 8pt
-tray-spacing = 16pt
-
-[module/xworkspaces]
-type = internal/xworkspaces
-
-label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
-
-label-occupied = %name%
-label-occupied-padding = 1
-
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
-
-label-volume = %percentage%%
-
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
-
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
+[module/date]
+type = internal/date
+interval = 5
+date = %a %b %d, %H:%M
+label =  %date%
+label-padding = 2
+label-foreground = ${colors.foreground}
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
+format-prefix = 
 label = %percentage:2%%
+label-padding = 2
+label-foreground = ${colors.color2}
 
-[network-base]
-type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+[module/disk]
+type = internal/fs
+interval = 30
+mount-0 = /
+label-mounted =  %mountpoint%: %free%
+label-padding = 2
+label-foreground = ${colors.color3}
 
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+[module/tray]
+type = internal/tray
+tray-padding = 2
 
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+[bar/gruvbox-light]
+width = 100%
+height = 28
+padding-right = 2
+background = ${colors.background}
+foreground = ${colors.foreground}
+font-0 = "JetBrainsMono Nerd Font:style=Medium:size=10;3"
+modules-left = i3
+modules-center = date
+modules-right = cpu disk tray
+separator = |
+separator-padding = 2
 
-[module/date]
-type = internal/date
-interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
-
-label = %date%
-label-foreground = ${colors.primary}
-
-[settings]
-screenchange-reload = true
-pseudo-transparency = true
 
 ; vim:ft=dosini
